draft rest API
